objects/G2Crowd__G2_Review__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>G2 Reviews</relationshipLabel>
        <relationshipName>G2_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Categories__c</fullName>
        <label>Categories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__Company_Segment__c</fullName>
        <label>Company Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>small-business</fullName>
                </value>
                <value>
                    <fullName>mid-market</fullName>
                </value>
                <value>
                    <fullName>enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-employed</fullName>
                </value>
                <value>
                    <fullName>1-10 employees</fullName>
                </value>
                <value>
                    <fullName>51-200 employees</fullName>
                </value>
                <value>
                    <fullName>201-500 employees</fullName>
                </value>
                <value>
                    <fullName>501-1000 employees</fullName>
                </value>
                <value>
                    <fullName>1001-5000 employees</fullName>
                </value>
                <value>
                    <fullName>5001-10000 employees</fullName>
                </value>
                <value>
                    <fullName>10001+ employees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Product__c</fullName>
        <label>G2 Product</label>
        <referenceTo>G2Crowd__G2_Product__c</referenceTo>
        <relationshipLabel>G2 Reviews</relationshipLabel>
        <relationshipName>G2_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Review_ID__c</fullName>
        <externalId>true</externalId>
        <label>G2 Review ID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_URL__c</fullName>
        <label>G2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Updated_At__c</fullName>
        <label>G2 Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Airlines/Aviation</fullName>
                </value>
                <value>
                    <fullName>Alternative Dispute Resolution</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Apparel &amp; Fashion</fullName>
                </value>
                <value>
                    <fullName>Architecture &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Arts and Crafts</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation &amp; Aerospace</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Broadcast Media</fullName>
                </value>
                <value>
                    <fullName>Building Materials</fullName>
                </value>
                <value>
                    <fullName>Business Supplies and Equipment</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Civic &amp; Social Organization</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Computer &amp; Network Security</fullName>
                </value>
                <value>
                    <fullName>Computer Games</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware</fullName>
                </value>
                <value>
                    <fullName>Computer Networking</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Cosmetics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__NPS__c</fullName>
        <label>NPS</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Star_Rating__c</fullName>
        <label>Star Rating</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Submitted_At__c</fullName>
        <label>Submitted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Title__c</fullName>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Unattributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unattributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__User_Company__c</fullName>
        <label>User Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__User_Image__c</fullName>
        <label>User Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>G2Crowd__User_Name__c</fullName>
        <label>User Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>G2 Review</label>
    <listViews>
        <fullName>G2Crowd__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>G2 Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>